Continue fixing